--- a/src/app/user/userfeedback/userfeedback.component.html
+++ b/src/app/user/userfeedback/userfeedback.component.html
@@ -20,18 +20,18 @@
     </div>
     <div class="container">
       <div class="contactInfo">
-        <div class="box">
+        <!-- <div class="box">
           <div class="icon"><i class="fa fa-map-marker" aria-hidden="true"></i></div>
           <div class="text">
             <h3>Address</h3>
             <p>college road,nadiad.</p>
           </div>
-        </div>
+        </div> -->
         <div class="box">
           <div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
           <div class="text">
             <h3>Email</h3>
-            <p>shekhutsav1962001@gmail.com</p>
+            <p>simrangupta2061@gmail.com</p>
           </div>
         </div>
         <div class="box">
@@ -40,7 +40,7 @@
           </div>
           <div class="text">
             <h3>Phone no.</h3>
-            <p>7434069974</p>
+            <p>7897388074</p>
           </div>
         </div>
         <div class="box">
@@ -49,7 +49,7 @@
           </div>
           <div class="text">
             <h3>Instagram</h3>
-            <p>@_._utsav</p>
+            <p>@simran__gupta___</p>
           </div>
         </div>
       </div>
