--- a/src/app/ind/main/main.component.html
+++ b/src/app/ind/main/main.component.html
@@ -1,4 +1,4 @@
 <app-header></app-header>
 <app-famous></app-famous>
-<app-chefs></app-chefs>
+<!-- <app-chefs></app-chefs> -->
 <app-offer></app-offer>
