--- a/src/app/ind/offer/offer.component.html
+++ b/src/app/ind/offer/offer.component.html
@@ -78,11 +78,11 @@
 
 
 
-  <section>
+  <!-- <section>
     <footer class="page-footer mb-4">
       <div class="footer-copyright text-center py-3" style="color: tomato;">©2020 Copyright:Utsav Shekh</div>
     </footer>
-  </section>
+  </section> -->
 
 </body>
 
